# IRIS-Server

./: README.md  documentation.txt
server/: Cargo.toml
server/src/: cert_mng.rs  crypt.rs  main.rs
server/static/: index.html
