[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.23"
tokio-tungstenite = "0.18"
rustls-pemfile = "1.0.0"
rustls = "0.20.4"
actix-cors = "0.6.0" 
actix-web = {version = "4.0.1", features = ["rustls"]}
actix-files = "0.6.9"
rng = "0.1.0"
base64 = "0.10"
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
once_cell = "1.21.3"
hex = "0.4.3"
rsa = "0.9.9"
aes-gcm = "0.10"
rand_core = "0.6"
regex = "1.12.2"